[지훈][수정] 캐릭터 AbilityComponent 구조 수정

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -253,3 +253,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/Team05.BaseAttackComponent",NewName="/Script/Team05.AbilityComponentBase")
++ClassRedirects=(OldName="/Script/Team05.AttackComponentBase",NewName="/Script/Team05.AbilityComponentBase")
