--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -257,3 +257,5 @@ ManualIPAddress=
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/Team05.BaseAttackComponent",NewName="/Script/Team05.AbilityComponentBase")
 +ClassRedirects=(OldName="/Script/Team05.AttackComponentBase",NewName="/Script/Team05.AbilityComponentBase")
++FunctionRedirects=(OldName="/Script/Team05.BaseCharacter.OnRep_ServerRotationYaw",NewName="/Script/Team05.BaseCharacter.OnRep_ServerRotationPitch")
++FunctionRedirects=(OldName="/Script/Team05.Team05AnimInstance.AnimNotify_CheckMeleeAttackHit",NewName="/Script/Team05.Team05AnimInstance.AnimNotify_CheckAttackHit")
