[지훈][수정] 캐릭터 공격 시 피로도 증가되는 로직 수정, 캐릭터 회전 기본 함수로 변경

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -259,3 +259,4 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/Team05.AttackComponentBase",NewName="/Script/Team05.AbilityComponentBase")
 +FunctionRedirects=(OldName="/Script/Team05.BaseCharacter.OnRep_ServerRotationYaw",NewName="/Script/Team05.BaseCharacter.OnRep_ServerRotationPitch")
 +FunctionRedirects=(OldName="/Script/Team05.Team05AnimInstance.AnimNotify_CheckMeleeAttackHit",NewName="/Script/Team05.Team05AnimInstance.AnimNotify_CheckAttackHit")
++FunctionRedirects=(OldName="/Script/Team05.BaseCharacter.RotateCharacter",NewName="/Script/Team05.BaseCharacter.ServerRotateCharacter")
