--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -260,3 +260,5 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Team05.BaseCharacter.OnRep_ServerRotationYaw",NewName="/Script/Team05.BaseCharacter.OnRep_ServerRotationPitch")
 +FunctionRedirects=(OldName="/Script/Team05.Team05AnimInstance.AnimNotify_CheckMeleeAttackHit",NewName="/Script/Team05.Team05AnimInstance.AnimNotify_CheckAttackHit")
 +FunctionRedirects=(OldName="/Script/Team05.BaseCharacter.RotateCharacter",NewName="/Script/Team05.BaseCharacter.ServerRotateCharacter")
++FunctionRedirects=(OldName="/Script/Team05.BaseCharacter.Move1D",NewName="/Script/Team05.BaseCharacter.Move1D_Input")
++FunctionRedirects=(OldName="/Script/Team05.BaseCharacter.SetDirection",NewName="/Script/Team05.BaseCharacter.SetDirection_Input")
