--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/_Dev/Min/DevMenu.DevMenu
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+ServerDefaultMap=/Game/_Level/Levels/_MarioMap._MarioMap
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
@@ -260,3 +261,4 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Team05.BaseCharacter.OnRep_ServerRotationYaw",NewName="/Script/Team05.BaseCharacter.OnRep_ServerRotationPitch")
 +FunctionRedirects=(OldName="/Script/Team05.Team05AnimInstance.AnimNotify_CheckMeleeAttackHit",NewName="/Script/Team05.Team05AnimInstance.AnimNotify_CheckAttackHit")
 +FunctionRedirects=(OldName="/Script/Team05.BaseCharacter.RotateCharacter",NewName="/Script/Team05.BaseCharacter.ServerRotateCharacter")
+
