[가현][업데이트] 더블점프 추가, 에디터 시작 맵 수정

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/_Dev/Min/DevMenu.DevMenu
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/_Level/Levels/_MarioMap._MarioMap
 ServerDefaultMap=/Game/_Level/Levels/_MarioMap._MarioMap
 
 [/Script/Engine.RendererSettings]
@@ -263,3 +263,4 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Team05.BaseCharacter.RotateCharacter",NewName="/Script/Team05.BaseCharacter.ServerRotateCharacter")
 +FunctionRedirects=(OldName="/Script/Team05.BaseCharacter.Move1D",NewName="/Script/Team05.BaseCharacter.Move1D_Input")
 +FunctionRedirects=(OldName="/Script/Team05.BaseCharacter.SetDirection",NewName="/Script/Team05.BaseCharacter.SetDirection_Input")
+
