--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/_Dev/Min/DevMenu.DevMenu
 EditorStartupMap=/Game/_Level/Levels/_MarioMap._MarioMap
 ServerDefaultMap=/Game/_Level/Levels/_MarioMap._MarioMap
+GameInstanceClass=/Game/_Dev/Min/BP_GI_DevInstance.BP_GI_DevInstance_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
