[경민] 카운트다운 추가, 게임 재시작시 UI 보이도록 수정

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/_Dev/Min/DevMenu.DevMenu
-EditorStartupMap=/Game/_Level/Levels/_MarioMap._MarioMap
-ServerDefaultMap=/Game/_Level/Levels/_MarioMap._MarioMap
+EditorStartupMap=/Game/_Dev/Min/DevMenu.DevMenu
+ServerDefaultMap=/Game/_Dev/Min/DevLobby.DevLobby
 GameInstanceClass=/Game/_Dev/Min/BP_GI_DevInstance.BP_GI_DevInstance_C
 
 [/Script/Engine.RendererSettings]
