--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -268,6 +268,8 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Team05.BaseCharacter.ServerRotateCharacter",NewName="/Script/Team05.BaseCharacter.ServerRPCRotateCharacter")
 +FunctionRedirects=(OldName="/Script/Team05.BaseCharacter.ClientHit",NewName="/Script/Team05.BaseCharacter.MulticastRPCHit")
 +FunctionRedirects=(OldName="/Script/Team05.BaseCharacter.MulticastRPCGuardSphereChange",NewName="/Script/Team05.BaseCharacter.MulticastRPCApplyGuardSphereSize")
++ClassRedirects=(OldName="/Script/Team05.MyClass",NewName="/Script/Team05.RogueCharacter")
++ClassRedirects=(OldName="/Script/Team05.RougeCharacter",NewName="/Script/Team05.RogueCharacter")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
