--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -329,3 +329,5 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.NetworkSettings]
+net.AllowPIESeamlessTravel=True
