[지훈][추가] 캐릭터 피격 시 날라가는 경로에 연기 생성

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -270,6 +270,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Team05.BaseCharacter.MulticastRPCGuardSphereChange",NewName="/Script/Team05.BaseCharacter.MulticastRPCApplyGuardSphereSize")
 +ClassRedirects=(OldName="/Script/Team05.MyClass",NewName="/Script/Team05.RogueCharacter")
 +ClassRedirects=(OldName="/Script/Team05.RougeCharacter",NewName="/Script/Team05.RogueCharacter")
++EnumRedirects=(OldName="/Script/Team05.ECharacterState",ValueChanges=(("State_Hit","STATE_Hit")))
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
